syntax = "proto3";

package greet;

option go_package = "github.com/Clement-Jean/grpc-go-course/greet/proto";

message GreetRequest {
    string first_name = 1;
}

message GreetResponse {
    string result = 1;
}

service GreetService {
    rpc Greet (GreetRequest) returns (GreetResponse);
    rpc GreetStream (GreetRequest) returns (stream GreetResponse);
}

message SumRequest {
    int32 firstNum = 1;
    int32 secondNum = 2;
}

message SumResponse {
    int32 result = 1;
}

service SumService {
    rpc Sum (SumRequest) returns (SumResponse);
}